--- a/src/pages/Evang/layoutEvangelios.astro
+++ b/src/pages/Evang/layoutEvangelios.astro
@@ -1,23 +1,17 @@
 ---
 import Layaut from "../../components/Layaut.astro";
-const {frontmatter}=Astro.props
-
-
+const { frontmatter } = Astro.props;
 ---
 
-
 <Layaut>
-
-    <section>
-        <div class="w-full h-32 flex items-center justify-center">
-            <h1 class="text-4xl font-bold text-neutral-700">{frontmatter?.title}</h1>
-        
-        </div>
-        <div>
-            <p>
-{frontmatter?.description}
-            </p>
-        </div>
-    </section>
-
+  <section>
+    <div class="w-full h-32 flex items-center justify-center">
+      <h1 class="text-4xl font-bold text-neutral-700">{frontmatter?.title}</h1>
+    </div>
+    <div class="p-10 bg-gray-50 text-lg">
+      <p>
+      <slot/>
+      </p>
+    </div>
+  </section>
 </Layaut>
