--- a/src/pages/Evang/index.astro
+++ b/src/pages/Evang/index.astro
@@ -1,25 +1,21 @@
 ---
 import Layout from "../../components/Layaut.astro";
 
-const posts = await Astro.glob('./Post/*.md')
+const posts = await Astro.glob("./Post/*.md");
 ---
+<div class="container">
 
-
-
-<Layout titlePage="Evangelio del día"pageDescription="Evangelio del Dia">
-<div class="w-full h-32 flex items-center justify-center">
     <h1 class="text-4xl font-bold text-neutral-700">Evangelios del día</h1>
-
-</div>
-
-    <ul class="flex flex-col font-medium text-lg text-neutral-700 bg-gray-100 h-screen px-10 py-10 gap-5">
-        {
-            posts?.map(evan=>(
-                <li>
-                    <a href={evan.url}>{evan.frontmatter.title}</a></li>
-                    ))
-                }
-
+    
+    <ul
+    class="flex bg flex-col font-medium text-lg text-neutral-700 bg-gray-100 h-screen px-10 py-10 gap-5"
+    >
+    {
+        posts?.map((evan) => (
+            <li>
+                <a href={evan.url}>{evan.frontmatter.title}</a>
+                </li>
+    ))
+  }
 </ul>
-
-</Layout>
+                </div>
