--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,16 @@
 ---
 import Layaut from "../components/Layaut.astro";
+import About from "./About/About.astro";
+import Feature from "./Feature/Feature.astro";
+import Header from "./header/Header.astro";
+import Servicios from "./Servicios/Servicios.astro";
+import Evangelios from './Evang/index.astro'
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
-
-	<h1>como estas</h1>
+<Header/>
+<Feature/>
+<Evangelios/>
+<Servicios/>
+<About/>
 </Layaut>
