--- a/src/pages/header/Header.astro
+++ b/src/pages/header/Header.astro
@@ -1,1 +1,8 @@
-<h1>header</h1>
+---
+import NavBar from "./NavBar/NavBar.astro";
+
+---
+
+<header class="w-full h-screen bg-sky-200">
+<NavBar/>
+</header>
