--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,17 @@ import About from "./About/About.astro";
 import Feature from "./Feature/Feature.astro";
 import Header from "./header/Header.astro";
 import Servicios from "./Servicios/Servicios.astro";
-import Evangelios from './Evang/index.astro'
+import Evangelios from "./Evang/index.astro";
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
-<Header/>
-<Feature/>
-<Evangelios/>
-<Servicios/>
-<About/>
+  <Header />
+  <main>
+
+	  <Feature />
+	  <Evangelios />
+	  <Servicios />
+	  <About />
+	</main>
+	<footer></footer>
 </Layaut>
