--- a/src/pages/header/NavBar/NavBar.astro
+++ b/src/pages/header/NavBar/NavBar.astro
@@ -1,5 +1,13 @@
-<nav class="w-full py-3">
-    <div>logo</div>
-    <div>menus</div>
-    <div>direcion</div>
+<nav class="w-full py-5 fixed top-0 text-gray-700 z-50 flex items-center justify-between px-5 bg-white/60 border-b  border-cyan-300/80">
+    <div class="w-3/12 mx-auto flex bg-red-<500>">logo</div>
+    <div class="w-6/12">
+        <ul class="flex items-center justify-evenly">
+            <li class="cursor-pointer">Parroquia</li>
+            <li>Actividades</li>
+            <li>Oración</li>
+            <li>Enlaces</li>
+            <li>Contacto</li>
+        </ul>
+    </div>
+    <div class="w-3/12 mx-auto flex bg-red-<500>">direcion</div>
 </nav>
