--- a/src/pages/Evang/index.astro
+++ b/src/pages/Evang/index.astro
@@ -8,7 +8,7 @@ const posts = await Astro.glob("./Post/*.md");
   <h1 class="text-4xl font-bold text-neutral-700">Evangelios del día</h1>
 
   <ul
-    class="flex bg flex-col font-medium text-lg text-neutral-700 bg-gray-100 h-screen px-10 py-10 gap-5"
+    class="flex bg flex-col font-medium text-lg text-neutral-700 }px-10 py-10 gap-5"
   >
     {
       posts?.map((evan) => (
