--- a/src/pages/Feature/Feature.astro
+++ b/src/pages/Feature/Feature.astro
@@ -1,1 +1,34 @@
-<h1>featuere</h1>
+---
+import FeatureComponent from "./componentes/FeatureComponent";
+
+const arrayFeature=[
+    {
+        id:1,
+        title:"horarios",
+        img:"Image",
+        class:'bg-blue-400 '
+    },
+    {
+        id:2,
+        title:"servicios",
+        img:"Image",
+        class:'bg-cyan-400 '
+       },   {
+        id:3,
+        title:"horarios",
+        img:"Image",
+        class:'bg-yellow-600 '
+    }
+]
+---
+
+
+<div class="mx-auto container flex items-center justify-evenly gap-20">
+{arrayFeature.map((feat)=>(
+     <div class={`${feat.class} p-5 h-48 rounded w-3/12 text-gray-100 font-bold text-3xl`}   >
+        <h2>{feat.title}</h2>
+        <div>{feat.img}</div>
+    </div>
+    
+))}
+</div>
