--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Feature from "./Feature/Feature.astro";
 import Header from "./header/Header.astro";
 import Servicios from "./Servicios/Servicios.astro";
 import Evangelios from "./Evang/index.astro";
+import Novedades from "./Novedades/Novedades.astro";
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
@@ -12,6 +13,7 @@ import Evangelios from "./Evang/index.astro";
   <main>
 
 	  <Feature />
+	  <Novedades/>
 	  <Evangelios />
 	  <Servicios />
 	  <About />
