--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,19 +4,19 @@ import About from "./About/About.astro";
 import Feature from "./Feature/Feature.astro";
 import Header from "./header/Header.astro";
 import Servicios from "./Servicios/Servicios.astro";
-import Evangelios from "./Evang/index.astro";
+import Evangelios from "./Evangelio/evangelio.astro";
 import Novedades from "./Novedades/Novedades.astro";
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
+ 
   <Header />
   <main>
-
-	  <Feature />
-	  <Novedades/>
-	  <Evangelios />
-	  <Servicios />
-	  <About />
-	</main>
-	<footer></footer>
+    <Feature />
+    <Novedades />
+    <Evangelios />
+    <Servicios />
+    <About />
+  </main>
+  <footer></footer>
 </Layaut>
