--- a/src/pages/Feature/Feature.astro
+++ b/src/pages/Feature/Feature.astro
@@ -27,7 +27,7 @@ const arrayFeature=[
 ---
 
 
-<div class="mx-auto container flex items-center my-16 justify-evenly gap-20 text-right ">
+<div class="mx-auto container flex items-center my-16 justify-evenly gap-20 text-right z-20 relative">
 {arrayFeature.map((feat)=>(
      <a 
      href={feat.href}     
