--- a/src/pages/Novedades/Novedades.astro
+++ b/src/pages/Novedades/Novedades.astro
@@ -37,7 +37,7 @@ title:'seis'
 
 ---
 
-<section class="container mx-auto my-36 text-gray-700 flex flex-col items-center justify-center">
+<section class="container mx-auto my-36 text-gray-700 flex flex-col items-center justify-center z-20 relative">
 
     <h2 class="text-3xl font-bold my-16 ">Novedades</h2>
     <div class="mx-auto w-11/12 flex flex-wrap items-center justify-evenly gap-y-8">
