--- a/src/pages/evangelio.astro
+++ b/src/pages/evangelio.astro
@@ -1,11 +1,42 @@
-
 ---
-import NavBar from '../pages/NavBar/NavBar.astro';
-
+import NavBar from "../pages/NavBar/NavBar.astro";
 ---
+
 <NavBar />
-<div class=" my-20 pt-20">
-<h1>Evangelio de hoy</h1>
-    
-    <iframe src="https://evangeli.net/evangelio/widget/web" frameborder="0" class="w-full mt-20 container mx-auto h-screen" height="auto"></iframe>
+<div
+  class="my-20 mx-auto container w-full flex flex-col items-center h-full min-h-screen"
+>
+  <h1 class="text-5xl font-bold my-16">Evangelio de hoy</h1>
+  <div class="w-full py-5 px-20 container mx-auto flex bg-gray-100 items-center justify-between">
+    <div class=" w-6/12 ">
+      Leemos, contemplamos y reflexionamos la lectura a partir del servicio
+      gratuito que nos brinda <span
+        class="uppercase text-xl font-medium underline"
+      >
+        evangeli.net</span
+      >, para saber mas sobre este servicio, visita su pagina haciendo click en
+      la imagen.
+    </div>
+    <div class=" w-4/12 h-1/2">
+    <a
+    class="w-full"
+      href="https://evangeli.net/evangelio?utm_source=banner&utm_medium=links&utm_campaign=2023"
+      title="Contemplar el Evangelio de hoy - homilías católicas del Evangelio del día"
+      target="_blank"
+    >
+      <img
+      class="w-full object-cover"
+        src="//evangeli.net/_static/img/evangeli_banner.png"
+        width="240px"
+        heigth="60px"
+      /></a
+    ></div>
+  </div>
+  <div class="w-full h-full mt-5">
+    <iframe
+      src="https://evangeli.net/evangelio/widget/web"
+      frameborder="0"
+      class="w-full container bg-gray-100 mx-auto min-h-screen"
+      height="auto"></iframe>
+  </div>
 </div>
