--- a/src/pages/header/Background.astro
+++ b/src/pages/header/Background.astro
@@ -1,3 +1,5 @@
-<div class="absolute w-[500px] rounded-full h-[500px] bg-gradient-to-tr from-cyan-500/50 to-blue-500 blur-2xl bottom-1/3 right-14"></div>
-<div class="absolute w-[600px] rounded-full h-[600px] bg-gradient-to-tr from-violet-500/50 to-rose-500 blur-2xl bottom-10 right-[20em]"></div>
-<div class="absolute w-full  h-full bg-neutral-50/40 backdrop-blur-xl top-0 left-0"></div>
+<div class="absolute w-[500px] rounded-full h-[500px] bg-gradient-to-tr from-cyan-500/50 to-blue-500 blur-2xl top-8 right-14 z-10"></div>
+<div class="absolute w-[600px] rounded-full h-[600px] bg-gradient-to-tr from-violet-500/50 to-rose-500 blur-2xl top-10 right-[20em] z-10"></div>
+<div class="absolute w-[500px] rounded-full h-[500px] bg-gradient-to-tr from-orange-500/50 to-red-500 blur-2xl top-1/2 left-14 z-10"></div>
+<div class="absolute w-[600px] rounded-full h-[600px] bg-gradient-to-tr from-yellow-500/50 to-yellow-500 blur-2xl top-1/2 left-[20em] z-10"></div>
+<div class="absolute w-full  h-full bg-neutral-50/40 backdrop-blur-xl top-0 left-0 z-10"></div>
