creando banner de infoGral

--- a/src/pages/BannerCapillas/BannerCapilla.astro
+++ b/src/pages/BannerCapillas/BannerCapilla.astro
@@ -18,7 +18,7 @@ const comunidades:comunidad[] = [
     ];
 ---
 
-<section class="my-20 z-20 relative">
+<section class="my-10 z-20 relative">
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8">
     <h2
       class="text-center text-4xl text-gray-700 font-bold tracking-tight sm:text-5xl"
@@ -26,7 +26,7 @@ const comunidades:comunidad[] = [
       Nuestra Comunidad
     </h2>
 
-    <div class="mt-12 flex flex-wrap gap-4 items-center justify-evenly">
+    <div class=" py-16 flex flex-wrap gap-4 items-center justify-evenly">
      {
         comunidades?.map((comunidad)=>(
             <CardCapilla
