--- a/src/pages/HorarioHome/HorarioHome.astro
+++ b/src/pages/HorarioHome/HorarioHome.astro
@@ -4,9 +4,9 @@ import CardHorario from "./CardHorario.astro";
 
 
 
-<section class="bg-gray-100  z-20 relative ">
-    <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8">
-      <h2 class="text-center text-4xl text-gray-700 font-bold tracking-tight sm:text-5xl ">
+<section class="bg-gray-100  z-20 relative mt-16">
+    <div class="mx-auto max-w-screen-xl px-4  sm:px-6 sm:py-24 lg:px-8">
+      <h2 class="text-center text-4xl text-gray-700 my-20 font-bold tracking-tight sm:text-5xl ">
         Horarios de Misa - Parroquia Cristo Rey
       </h2>
   
