--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Evangelios from "./Evangelio/evangelio.astro";
 import Novedades from "./Novedades/Novedades.astro";
 import HorarioHome from "./HorarioHome/HorarioHome.astro";
 import BannerCapilla from "./BannerCapillas/BannerCapilla.astro";
+import InfoGral from "./InformacionGral/InfoGral.astro";
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
@@ -19,7 +20,7 @@ import BannerCapilla from "./BannerCapillas/BannerCapilla.astro";
 	<HorarioHome/>
     <Servicios />
 	<BannerCapilla/>
-    <About />
+    <InfoGral/>
   </main>
   <footer></footer>
 </Layaut>
