--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,8 @@ import Novedades from "./Novedades/Novedades.astro";
 import HorarioHome from "./HorarioHome/HorarioHome.astro";
 import BannerCapilla from "./BannerCapillas/BannerCapilla.astro";
 import InfoGral from "./InformacionGral/InfoGral.astro";
+import Contacto from "./contacto/contacto.astro";
+import Footer from "./Footer/Footer.astro";
 ---
 
 <Layaut pageDescription="Pagina de la Parroquia Cristo Rey de La Banda">
@@ -21,6 +23,7 @@ import InfoGral from "./InformacionGral/InfoGral.astro";
     <Servicios />
 	<BannerCapilla/>
     <InfoGral/>
+	<Contacto/>
   </main>
-  <footer></footer>
+  <Footer/>
 </Layaut>
