--- a/src/pages/HorarioHome/HorarioHome.astro
+++ b/src/pages/HorarioHome/HorarioHome.astro
@@ -4,13 +4,13 @@ import CardHorario from "./CardHorario.astro";
 
 
 
-<section class="bg-gray-100  z-20 relative mt-16">
+<section class="bg-gray-100 md:my-0 py-16 z-20 px-2 relative mt-16">
     <div class="mx-auto max-w-screen-xl px-4  sm:px-6 sm:py-24 lg:px-8">
-      <h2 class="text-center text-4xl text-gray-700 my-20 font-bold tracking-tight sm:text-5xl ">
+      <h2 class="text-center text-4xl text-gray-700 mb-5 font-bold tracking-tight sm:text-5xl ">
         Horarios de Misa - Parroquia Cristo Rey
       </h2>
   
-      <div class="mt-12 flex flex-wrap gap-4 md:grid-cols-3 md:gap-8">
+      <div class="py-12 flex flex-wrap gap-4 md:grid-cols-3 md:gap-8">
       <CardHorario
       dias="Lunes a Viernes"
       horario="19:00hs"
