--- a/src/pages/Feature/Feature.astro
+++ b/src/pages/Feature/Feature.astro
@@ -27,14 +27,14 @@ const arrayFeature=[
 ---
 
 
-<div class="mx-auto container flex items-center my-16 justify-evenly gap-20 text-right z-20 relative">
+<div class="mx-auto container flex flex-row items-center my-16 justify-evenly gap-4 px-5 md:px-0 md:gap-20 text-right z-20 relative">
 {arrayFeature.map((feat)=>(
      <a 
      href={feat.href}     
-     class={`${feat.class} group backdrop-blur-sm p-5 h-48 rounded-lg w-3/12 shadow-lg overflow-hidden duration-200 hover:scale-105 hover:shadow-xl hover:-translate-y-1 cursor-pointer text-gray-100 font-bold text-3xl`}   >
-        <h2 class="uppercase text-xl group-hover:text-2xl  duration-300 group-hover:underline group-hover:text-gray-200 group-hover:tracking-widest">{feat.title}</h2>
+     class={`${feat.class} group backdrop-blur-sm p-5 h-48 rounded-lg w-4/12 md:w-3/12 shadow-lg overflow-hidden duration-200 hover:scale-105  hover:shadow-xl hover:-translate-y-1 cursor-pointer text-gray-100 font-bold text-3xl`}   >
+        <h2 class="uppercase md:text-xl text-lg group-active:text-2xl group-active:tracking-widest group-hover:text-2xl  duration-300 group-hover:underline group-hover:text-gray-200 group-hover:tracking-widest">{feat.title}</h2>
        <Image 
-       class="-rotate-45 -translate-y-3 group-hover:-rotate-[55deg] duration-150"
+       class="-rotate-45 md:-translate-y-3 group-hover:-rotate-[55deg] group-active:-rotate-[55deg]  duration-150"
        alt={feat.title}
         width={200}
         height={200}
