--- a/src/pages/InformacionGral/CardInfoGral.astro
+++ b/src/pages/InformacionGral/CardInfoGral.astro
@@ -8,7 +8,7 @@ const { children, colors, src } = Astro.props;
 
 <a
   href="#"
-  class={`bg-gradient-to-br rounded ${colors} w-1/3 flex-auto flex h-64 relative rounded-lg overflow-hidden cursor-pointer group after:contents-[' '] after:w-full after:absolute after:top-0 after:h-full after:bg-slate-800/50 backdrop-blur-sm after:-translate-x-[100%] hover:after:-translate-x-0 after:duration-200`}
+  class={`bg-gradient-to-br rounded ${colors} md:w-1/3 flex-auto flex md:h-64 h-48 w-full relative rounded-lg overflow-hidden cursor-pointer group after:contents-[' '] after:w-full after:absolute after:top-0 after:h-full after:bg-slate-50/50 backdrop-blur-sm after:-translate-x-[100%] hover:after:-translate-x-0 after:duration-200`}
 >
   <img
     src={src}
@@ -16,7 +16,7 @@ const { children, colors, src } = Astro.props;
     class="object-cover w-full group-hover:scale-105 duration-500"
   />
   <h3
-    class="absolute text-4xl font-extrabold tracking-wide text-transparent bg-clip-text bg-gradient-to-r z-40 duration-700 from-gray-500 via-gray-500 to-yellow-500 group-hover:text-gray-100 top-5 left-5"
+    class="absolute text-4xl font-extrabold tracking-wide text-transparent bg-clip-text bg-gradient-to-r z-40 duration-700 from-gray-500 via-gray-500 to-yellow-500 group-hover:text-gray-600 top-5 left-5"
   >
     {children}
   </h3>
