--- a/src/pages/InformacionGral/InfoGral.astro
+++ b/src/pages/InformacionGral/InfoGral.astro
@@ -23,7 +23,7 @@ const cardInfo:cardInfoGral[]=[
 ---
 
 <section class="my-10 z-20 relative bg-gray-200">
-<div class="w-full container mx-auto flex items-center justify-evenly gap-5 px-10 py-5">
+<div class="w-full container mx-auto flex flex-col md:flex-row items-center justify-evenly gap-5 px-10 py-5">
 
     {
         cardInfo?.map((card)=>(
