siguiendo con el proyecto

--- a/src/pages/BannerCapillas/BannerCapilla.astro
+++ b/src/pages/BannerCapillas/BannerCapilla.astro
@@ -15,6 +15,11 @@ const comunidades:comunidad[] = [
         ubicacion:"Barrio Villa Raquel",
         festividad:"7 de Agosto"
     },
+    {
+        name:"Divina Misericordia",
+        ubicacion:"Barrio El Rincón",
+        festividad:"1° de pascua"
+    },
     ];
 ---
 
