--- a/src/pages/HorarioHome/HorarioHome.astro
+++ b/src/pages/HorarioHome/HorarioHome.astro
@@ -10,7 +10,7 @@ import CardHorario from "./CardHorario.astro";
         Horarios de Misa - Parroquia Cristo Rey
       </h2>
   
-      <div class="py-12 flex flex-wrap gap-4 md:grid-cols-3 md:gap-8">
+      <div class="py-12 flex flex-wrap gap-y-4 md:gap-8">
       <CardHorario
       dias="Lunes a Viernes"
       horario="19:00hs"
