--- a/src/pages/InformacionGral/CardInfoGral.astro
+++ b/src/pages/InformacionGral/CardInfoGral.astro
@@ -16,7 +16,7 @@ const { children, colors, src } = Astro.props;
     class="object-cover w-full group-hover:scale-105 duration-500"
   />
   <h3
-    class="absolute text-4xl font-extrabold tracking-wide text-transparent bg-clip-text bg-gradient-to-r z-40 duration-700 from-gray-500 via-gray-500 to-yellow-500 group-hover:text-gray-600 top-5 left-5"
+    class="absolute text-4xl font-extrabold tracking-wide text-transparent drop-shadow-[-0px_-0px_2px_rgba(3,3,3,0.80)] hover:drop-shadow-none hover:shadow-white  bg-clip-text bg-gradient-to-r z-40 duration-700 from-gray-100 to-gray-300 group-hover:text-gray-600 top-5 left-5"
   >
     {children}
   </h3>
