--- a/src/pages/BannerCapillas/CardCapilla.astro
+++ b/src/pages/BannerCapillas/CardCapilla.astro
@@ -2,7 +2,7 @@
 const {name,ubicacion,festividad}=Astro.props
 ---
 
-    <div class="flex flex-col p-5 border-x-2 text-gray-700 shadow-lg rounded-md border-cyan-500/50">
+    <div class="flex flex-col w-full md:w-auto p-5 border-x-2 text-gray-700 shadow-lg rounded-md border-cyan-500/50">
         <div class="flex flex-col items-center  justify-center px-2 py-8 space-y-4 ">
             <p class="text-2xl font-bold">{name}
             </p>
