--- a/src/pages/HorarioHome/CardHorario.astro
+++ b/src/pages/HorarioHome/CardHorario.astro
@@ -2,7 +2,7 @@
 const{horario,dias,horarioSecre} =Astro.props 
 ---
 
-<article class="rounded-lg bg-gray-100 p-8 md:w-1/4 flex-auto text-center border-x-2 border-yellow-300 shadow-md">
+<article class="rounded-lg bg-gray-100 p-8 md:w-1/4 w-[48%] flex-auto text-center border-x-2 border-yellow-300 shadow-md">
    
 
      
