--- a/src/pages/Footer/Footer.astro
+++ b/src/pages/Footer/Footer.astro
@@ -1,44 +1,53 @@
 ---
+import links from "../../components/Links";
 import FooterRama from "./FooterRama.astro";
-
 ---
 
-    <footer class="text-neutral-100 bg-neutral-800 z-40 relative body-font ">
-    <div class=" px-5 py-16 mx-auto flex md:items-center md:w-10/12 lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
-      <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-        <a
-        target="_blank"
-          href={"https://ramiroquiroga.vercel.app"}
-          class="w-full flex my-auto h-full items-center gap-2 "
+<footer class="text-neutral-100 bg-neutral-800 z-40 relative body-font">
+  <div
+    class="px-5 py-16 mx-auto flex md:items-start items-start md:w-10/12 lg:items-start flex-col md:flex-row"
+  >
+    <div
+      class="w-full md:w-1/2  flex-shrink-0 md:mx-0 mx-auto text-center flex flex-col items-center md:text-left md:mt-0 mt-10"
+    >
+
+        <h2
+          class="text-lg font-bold text-transparent bg-clip-text bg-gradient-to-r to-yellow-600 from-yellow-800"
         >
-   
-          <h2 class=" text-xl font-bold text-transparent bg-clip-text bg-gradient-to-r to-orange-600 from-orange-800">
-            Cristo Rey
-          </h2>
-        </a>
-      </div>
-      <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">
-            CATEGORIES
-          </h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a class="text-gray-200 hover:text-gray-800">First a</a>
-            </li>
-            <li>
-              <a class="text-gray-200 hover:text-gray-800">Second a</a>
-            </li>
-            <li>
-              <a class="text-gray-200 hover:text-gray-800">Third a</a>
-            </li>
-            <li>
-              <a class="text-gray-200 hover:text-gray-800">Fourth a</a>
-            </li>
-          </nav>
-        </div>
-       
+          Parroquia
+        </h2>  
+        <h2
+          class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r to-yellow-600 from-yellow-800"
+        >
+          Cristo Rey
+        </h2>  
+        <p class=" text-base">La Banda | Santiago del Estero</p>
+        <p class=" text-base">España 346 Barrio Centro | La Banda</p>
+  
+    </div>
+
+    <div
+      class="w-full md:w-1/2 flex flex-wrap items-center -mb-10 md:text-left text-center order-first"
+    >
+      <div class="lg:w-1/2 md:w-1/2 w-full ">
+        <h2
+          class=" font-medium text-white tracking-widest text-lg mb-3"
+        >
+          Secciones del sitio
+        </h2>
+        <nav class="list-none mb-10">
+          <ul class="flex flex-wrap md:text-left mnd:items-start items-center text-center md:justify-start justify-center gap-2">
+            {
+              links?.map((link) => (
+                <li class="cursor-pointer hover:scale-105 tracking-widest font-thin duration-200">
+                  <a href={link.href}>{link.name}</a>
+                </li>
+              ))
+            }
+          </ul>
+        </nav>
       </div>
     </div>
-    <FooterRama/>
-  </footer>
+  </div>
+  <FooterRama />
+</footer>
