--- a/src/pages/NavBar/NavBar.astro
+++ b/src/pages/NavBar/NavBar.astro
@@ -1,20 +1,25 @@
 ---
 import Links from "../../components/Links";
+import ButtonNav from "./ButtonNav";
 ---
 
-<nav class="w-full py-5 fixed top-0 text-gray-700 z-50 flex items-center justify-between px-5 bg-white/60 border-b  border-cyan-300/80">
+<>
+<ButtonNav client:load/>
+  <nav
+    class="hidden w-full py-5 fixed top-0 text-gray-700 z-50 md:flex items-center justify-between px-5 bg-white/60 border-b border-cyan-300/80"
+  >
     <div class="w-3/12 mx-auto flex bg-red-<500>">logo</div>
     <div class="w-6/12">
-        <ul class="flex items-center justify-evenly">
-            {
-                Links?.map((link)=>(
-    <li class="cursor-pointer">
-        <a href={link.href}>
-        {link.name}</a></li>
-
-))
-            }
-        </ul>
+      <ul class="flex items-center justify-evenly">
+        {
+          Links?.map((link) => (
+            <li class="cursor-pointer">
+              <a href={link.href}>{link.name}</a>
+            </li>
+          ))
+        }
+      </ul>
     </div>
     <div class="w-3/12 mx-auto flex bg-red-<500>">otra cosa</div>
-</nav>
+  </nav>
+</>
